# Vulkan

./: .gitignore  .gitmodules  .push_status  BUILD_COMPLETE_FULL_SDK.sh  BUILD_COMPLETE_SDK.sh  BUILD_VERIFICATION_REPORT.md  CLAUDE.md  COMPLETE_BUILD_VERIFICATION.sh  COMPLETE_SDK_ANALYSIS.md  COMPLETE_VERIFICATION_REPORT.md  COMPREHENSIVE_CAPABILITY_ANALYSIS.md  COMPREHENSIVE_GIT_ANALYSIS_AND_DEMO_VERIFICATION.md  COMPREHENSIVE_TEST_ANALYSIS.md  COMPREHENSIVE_TEST_SUITE_COMPLETE.md  DEMO_ALL.sh  FINAL_BUILD_CHECK.sh  FINAL_BUILD_VERIFICATION_COMPLETE.md  FINAL_SYSTEMATIC_TEST.sh  INTEGRATE_ALL_SDK.sh  ML_OPERATIONS_100_PERCENT_PASS.md  PERFORMANCE_VERIFICATION.sh  README.md  REPOSITORY_ARCHITECTURE.md  RUN_SYSTEMATIC_TESTS.sh  SDK  SDK_INTEGRATION_SUCCESS.md  SETUP_INSTRUCTIONS.md  VERIFY_ALL.sh  VERIFY_SDK_COMPLETE.sh  run_ml_demo.sh  setup_git_workflow.sh  setup_git_workflow_fixed.sh  vulkan-ml-sdk  vulkan-ml-sdk-build
archive/: COMPLETE_GITHUB_SETUP.md  GITHUB_SYNC_VERIFICATION.md  GIT_WORKFLOW_GUIDE.md  SUCCESS_REPORT.md  UPSTREAM_SYNC_GUIDE.md  VERIFICATION_REPORT.md  check_everything.sh  fix_upstream_remotes.sh  github_setup_wizard.sh  prepare_repos_for_github.sh  push_all_to_github.sh  test_upstream_sync.sh
archive/old-scripts/: COMPLETE_TEST_SUITE.sh  FINAL_BUILD_TEST.sh  FINAL_VERIFICATION.sh  RUN_COMPREHENSIVE_TESTS.sh  SYSTEMATIC_TEST_RESULTS.md  VERIFICATION_COMPLETE.md
builds/ARM-ML-SDK-Complete/: README.md  launch_sdk.sh
docs/: BUILD_SYSTEM_COMPLETE.md  FINAL_SETUP.md  QUICK_START.md  README.md  VERIFICATION_COMPLETE.md
docs/journey/: COMPLETE_DAY_JOURNEY_LOG.md
examples/demos/: benchmark_ml_ops.sh  quick_test.sh  run_style_transfer.sh
ml_tutorials/: 1_analyze_model.sh  2_test_compute.sh  3_benchmark.sh  4_style_transfer.sh  5_optimization.sh
scripts/: cleanup_directory.sh  git_workflow_helpers.sh  install.sh
scripts/main/: BUILD_SDK.sh
systematic_tests/: build_tests.sh  end_to_end_tests.sh  performance_benchmarks  performance_benchmarks.cpp  run_all_tests.sh  unit_tests  unit_tests.cpp
tests/: CMakeLists.txt  README.md  TEST_SUITE_OVERVIEW.md  compile_and_run_all_tests.sh  mobilenet_v2_1.0_224_quantized_1_default_1_pipeline.json  run_all_tests.sh  run_test_suite.sh  test_benchmarks.py  test_framework.py  test_integration.py  test_scenario.json  test_scenarios.py  test_validation.py
tests/data/scenarios/: add_test_0.json  add_test_1.json  add_test_2.json  add_test_3.json  avgpool_test_0.json  avgpool_test_1.json  avgpool_test_10.json  avgpool_test_11.json  avgpool_test_12.json  avgpool_test_2.json  avgpool_test_3.json  avgpool_test_4.json  avgpool_test_5.json  avgpool_test_6.json  avgpool_test_7.json  avgpool_test_8.json  avgpool_test_9.json  batchnorm_test_0.json  batchnorm_test_1.json  batchnorm_test_2.json  batchnorm_test_3.json  batchnorm_test_4.json  batchnorm_test_5.json  batchnorm_test_6.json  batchnorm_test_7.json  composite_attention_block.json  composite_mobilenet_block.json  composite_resnet_block.json  concat_test_0.json  concat_test_1.json  concat_test_2.json  concat_test_3.json  conv2d_test_0.json  conv2d_test_1.json  conv2d_test_10.json  conv2d_test_11.json  conv2d_test_12.json  conv2d_test_13.json  conv2d_test_14.json  conv2d_test_15.json  (+128 more)
tests/framework/: test_framework.py  test_scenarios.py  test_validation.py
tests/integration/: scenario_model_tests.py
tests/system/: test_arm_extensions.cpp  test_build_system.cpp
tests/unit/: memory_management_tests.cpp  ml_operations_tests.cpp  spirv_shader_tests.cpp  vulkan_core_tests.cpp
tests/unit/runner/: test_scenario_runner.cpp
tests/unit/vgf/: test_vgf_core.cpp  test_vgf_core_fixed.cpp  test_vgf_simple.cpp
tests/validation/ml_operations/: test_ml_ops_validation.cpp
tools/: verify_sdk_complete.sh  vulkan-ml-sdk  vulkan-ml-sdk-build
